--- a/index.html
+++ b/index.html
@@ -294,7 +294,8 @@
             <div class="gridCard-conteudo">
               <h5>Caminho de mesa tropical</h5>
               <p class=conteudo-preco>R$300,00</p>
-              <p class="conteudo-descricao">Alegre sua casa. Mais cor e vida no ambiente com esse lindo caminho demesa com  flores tropicais</p>
+              <p class="conteudo-descricao">Alegre sua casa. Mais cor e vida no ambiente com esse lindo caminho demesa
+                com flores tropicais</p>
               <div class="card-botoes">
                 <button class="card-botaoCarrinho">
                   <img src="img/IconeCarrinho.png">
@@ -312,8 +313,8 @@
             <div class="gridCard-conteudo">
               <h5>Buquê tropical</h5>
               <p class=conteudo-preco>R$209,80</p>
-              <p class="conteudo-descricao">Exuberante buquê de flores tropicais, certamente o maior e mais colorido ramalhete de flores que já viu! Um conjunto de cores,
-                 formas e texturas que vai deixar a pessoa querida com grande alegria e entusiasmo.</p>
+              <p class="conteudo-descricao">Exuberante buquê de flores tropicais, certamente o maior e mais colorido
+                ramalhete de flores que já viu!.</p>
               <div class="card-botoes">
                 <button class="card-botaoCarrinho">
                   <img src="img/IconeCarrinho.png">
@@ -326,12 +327,13 @@
         <div class="column">
           <div class="gridCard">
             <div class="gridCard-imagens">
-              <img src="img/buque 5.jpg">
+              <img src="img/Arranjo1.jpg">
             </div>
             <div class="gridCard-conteudo">
-              <h5>Buquê tropical</h5>
+              <h5>Arranjo de Mesa</h5>
               <p class=conteudo-preco>R$259,00</p>
-              <p class="conteudo-descricao">Uma Forma Linda de Presentear Alguém Muito Especial. Surpreenda a pessoa amada da forma mais bonita que se existe =, presenteando.</p>
+              <p class="conteudo-descricao">Uma Forma Linda de Presentear Alguém Muito Especial. Surpreenda a pessoa
+                amada da forma mais bonita que se existe =, presenteando.</p>
               <div class="card-botoes">
                 <button class="card-botaoCarrinho">
                   <img src="img/IconeCarrinho.png">
@@ -344,13 +346,14 @@
         <div class="column">
           <div class="gridCard">
             <div class="gridCard-imagens">
-              <img src="img/buque 6.jpg">
+              <img src="img/box tropical 2.jpeg">
             </div>
             <div class="gridCard-conteudo">
-              <h5>Buquê tropical</h5>
+              <h5>Box tropical</h5>
               <p class=conteudo-preco>R$162,80</p>
-              <p class="conteudo-descricao">Nossa versão mais cool para um presente moderno e diferente.
-                Arranjo de flores tropicais em caixa de acrílico preta com acabamento em papel seda.</p>
+              <p class="conteudo-descricao">A combinação que não pode faltar. O branco com o tropical! O arranjo
+                tropical fica por conta das flores em tons de laranja, vermelho e amarelo, com um mix de folhagens bem.
+              </p>
               <div class="card-botoes">
                 <button class="card-botaoCarrinho">
                   <img src="img/IconeCarrinho.png">
@@ -367,11 +370,11 @@
         <div class="column">
           <div class="gridCard">
             <div class="gridCard-imagens">
-              <img src="img/caminho de mesa 1.jpg">
+              <img src="img/caminho de mesa 2.png">
             </div>
             <div class="gridCard-conteudo">
-              <h5>Buquê tropical</h5>
-              <p class=conteudo-preco>R$209,00</p>
+              <h5>Caminho de Mesa</h5>
+              <p class=conteudo-preco>R$468,00</p>
               <p class="conteudo-descricao">Nossa versão mais cool para um presente moderno e diferente.
                 Arranjo de flores tropicais em caixa de acrílico preta com acabamento em papel seda.</p>
               <div class="card-botoes">
@@ -386,13 +389,13 @@
         <div class="column">
           <div class="gridCard">
             <div class="gridCard-imagens">
-              <img src="img/caminho de mesa 1.jpg">
+              <img src="img/buque 5.jpg">
             </div>
             <div class="gridCard-conteudo">
               <h5>Buquê tropical</h5>
-              <p class=conteudo-preco>R$209,00</p>
-              <p class="conteudo-descricao">Nossa versão mais cool para um presente moderno e diferente.
-                Arranjo de flores tropicais em caixa de acrílico preta com acabamento em papel seda.</p>
+              <p class=conteudo-preco>R$189,00</p>
+              <p class="conteudo-descricao">Buquê tropical com cores quentes e vibrantes, composto com gerberas, rosas,
+                alstroemerias, flores secas e folhagens.</p>
               <div class="card-botoes">
                 <button class="card-botaoCarrinho">
                   <img src="img/IconeCarrinho.png">
@@ -405,13 +408,13 @@
         <div class="column">
           <div class="gridCard">
             <div class="gridCard-imagens">
-              <img src="img/caminho de mesa 1.jpg">
+              <img src="img/Arranjo2.jpg">
             </div>
             <div class="gridCard-conteudo">
-              <h5>Buquê tropical</h5>
-              <p class=conteudo-preco>R$209,00</p>
-              <p class="conteudo-descricao">Nossa versão mais cool para um presente moderno e diferente.
-                Arranjo de flores tropicais em caixa de acrílico preta com acabamento em papel seda.</p>
+              <h5>Arranjo tropical</h5>
+              <p class=conteudo-preco>R$259,00</p>
+              <p class="conteudo-descricao"> Sofisticado Arranjo de Heliconia Bihai em um lindo vaso de vidro tipo
+                aquario com corte baixo. As flores tropicais alem de lindas tambem decoram o ambiente.</p>
               <div class="card-botoes">
                 <button class="card-botaoCarrinho">
                   <img src="img/IconeCarrinho.png">
@@ -424,13 +427,13 @@
         <div class="column">
           <div class="gridCard">
             <div class="gridCard-imagens">
-              <img src="img/caminho de mesa 1.jpg">
+              <img src="img/box tropiacal 3.webp">
             </div>
             <div class="gridCard-conteudo">
-              <h5>Buquê tropical</h5>
-              <p class=conteudo-preco>R$209,00</p>
-              <p class="conteudo-descricao">Nossa versão mais cool para um presente moderno e diferente.
-                Arranjo de flores tropicais em caixa de acrílico preta com acabamento em papel seda.</p>
+              <h5>Box tropical</h5>
+              <p class=conteudo-preco>R$309,00</p>
+              <p class="conteudo-descricao">Arranjo de flores tropicais em caixa de acrílico preta com acabamento em
+                papel seda.</p>
               <div class="card-botoes">
                 <button class="card-botaoCarrinho">
                   <img src="img/IconeCarrinho.png">
@@ -447,13 +450,12 @@
         <div class="column">
           <div class="gridCard">
             <div class="gridCard-imagens">
-              <img src="img/caminho de mesa 1.jpg">
+              <img src="img/caminho de mesa 3.jpg">
             </div>
             <div class="gridCard-conteudo">
-              <h5>Buquê tropical</h5>
-              <p class=conteudo-preco>R$209,00</p>
-              <p class="conteudo-descricao">Nossa versão mais cool para um presente moderno e diferente.
-                Arranjo de flores tropicais em caixa de acrílico preta com acabamento em papel seda.</p>
+              <h5>Caminho de Mesa </h5>
+              <p class=conteudo-preco>R$609,00</p>
+              <p class="conteudo-descricao">Um lindo arranjo floral com diversas flores tropicais.</p>
               <div class="card-botoes">
                 <button class="card-botaoCarrinho">
                   <img src="img/IconeCarrinho.png">
@@ -466,13 +468,13 @@
         <div class="column">
           <div class="gridCard">
             <div class="gridCard-imagens">
-              <img src="img/caminho de mesa 1.jpg">
+              <img src="img/buque 6.jpg">
             </div>
             <div class="gridCard-conteudo">
               <h5>Buquê tropical</h5>
-              <p class=conteudo-preco>R$209,00</p>
-              <p class="conteudo-descricao">Nossa versão mais cool para um presente moderno e diferente.
-                Arranjo de flores tropicais em caixa de acrílico preta com acabamento em papel seda.</p>
+              <p class=conteudo-preco>R$129,00</p>
+              <p class="conteudo-descricao">Buquê de flores mistas e coloridas trazendo um pouco do clima tropical para
+                dentro de casa.</p>
               <div class="card-botoes">
                 <button class="card-botaoCarrinho">
                   <img src="img/IconeCarrinho.png">
@@ -485,13 +487,13 @@
         <div class="column">
           <div class="gridCard">
             <div class="gridCard-imagens">
-              <img src="img/caminho de mesa 1.jpg">
+              <img src="img/Arranjo3.jpg">
             </div>
             <div class="gridCard-conteudo">
-              <h5>Buquê tropical</h5>
-              <p class=conteudo-preco>R$209,00</p>
-              <p class="conteudo-descricao">Nossa versão mais cool para um presente moderno e diferente.
-                Arranjo de flores tropicais em caixa de acrílico preta com acabamento em papel seda.</p>
+              <h5>Arranjo tropical</h5>
+              <p class=conteudo-preco>R$346,00</p>
+              <p class="conteudo-descricao">Sofisticado Arranjo de Heliconia Bihai em um lindo vaso de vidro.
+                As flores tropicais alem de lindas tambem decoram o ambiente.</p>
               <div class="card-botoes">
                 <button class="card-botaoCarrinho">
                   <img src="img/IconeCarrinho.png">
@@ -504,13 +506,13 @@
         <div class="column">
           <div class="gridCard">
             <div class="gridCard-imagens">
-              <img src="img/caminho de mesa 1.jpg">
+              <img src="img/tropiacl box.jpg">
             </div>
             <div class="gridCard-conteudo">
-              <h5>Buquê tropical</h5>
-              <p class=conteudo-preco>R$209,00</p>
-              <p class="conteudo-descricao">Nossa versão mais cool para um presente moderno e diferente.
-                Arranjo de flores tropicais em caixa de acrílico preta com acabamento em papel seda.</p>
+              <h5>Box tropical</h5>
+              <p class=conteudo-preco>R$324,00</p>
+              <p class="conteudo-descricao">Box Mix de Flores São tantas flores lindas que a Floricultura Paraíso, sabe
+                que você fica na dúvida na hora da escolha. E para quando isso acontecer a nossa criação </p>
               <div class="card-botoes">
                 <button class="card-botaoCarrinho">
                   <img src="img/IconeCarrinho.png">
@@ -536,7 +538,7 @@
   <!-- Importação do Script bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous">
-    </script>
+  </script>
 </body>
 
 </html>
