--- a/index.html
+++ b/index.html
@@ -50,10 +50,9 @@
     </div>
   </div>
   <!-- Modal de login do usuário -->
-  <div class="modal fade" id="modalLogin" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
-    aria-hidden="true">
-    <div class="modal-dialog  modal-dialog-centered modal-lg">
-      <div class="modal-caixaGeral">
+  <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
+      <div class="modal-content modal-caixaGeral">
         <div class="modal-caixaApresentacao">
           <div class="apresentacao-logotipo">
             <img src="img/LogoFloricultura.png">
@@ -75,8 +74,8 @@
           </div>
           <form class="formularioLogin">
             <input type="email" id="loginEmail" placeholder="Email" />
-            <input type="password" id="loginSenha" placeholder="Senha" />
-            <a>Esqueceu a sua senha?</a>
+            <input type="password" id="loginSenha" placeholder="Senha" minlength="6"/>
+            <a id="esqueceuSenha">Esqueceu a sua senha?</a>
             <input type="submit" id="inputEnviarLogin" value="Login" />
           </form>
           <p id="textoConectarRede">Conectar pelas redes sociais</p>
@@ -91,7 +90,6 @@
             </button>
           </div>
           <a id="textoCriarConta">Criar uma conta</a>
-
         </div>
       </div>
     </div>
@@ -112,7 +110,7 @@
     </section>
 
     <section class="botoesCabecalho">
-      <button class="botaoLogin" data-bs-toggle="modal" data-bs-target="#modalLogin">Login</button>
+      <button class="botaoLogin" data-bs-toggle="modal" data-bs-target=".bd-example-modal-lg">Login</button>
       <button class="botaoCadastro" data-bs-toggle="modal" data-bs-target="#modalCadastrar">Cadastra-se</button>
     </section>
   </header>
