correção erros port

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           </button>
         </div>
         <div class="modal-body">
-          <h1>Cadastra-se</h1>
+          <h1>Cadastre-se</h1>
           <p>Já possui cadastro? <a id="facaLogin">Faça seu login</a></p>
           <form class="formularioCadastro">
             <input type="text" id="inputNome" placeholder="Nome" />
@@ -43,7 +43,7 @@
               <input type="checkbox" id="checkboxSenha" />
               <label for="checkboxSenha">Mostrar Senha</label>
             </div>
-            <input type="submit" id="inputEnviarCadastro" value="Cadastra-se">
+            <input type="submit" id="inputEnviarCadastro" value="Cadastre-se">
           </form>
         </div>
       </div>
@@ -111,7 +111,7 @@
 
     <section class="botoesCabecalho">
       <button class="botaoLogin" data-bs-toggle="modal" data-bs-target=".bd-example-modal-lg">Login</button>
-      <button class="botaoCadastro" data-bs-toggle="modal" data-bs-target="#modalCadastrar">Cadastra-se</button>
+      <button class="botaoCadastro" data-bs-toggle="modal" data-bs-target="#modalCadastrar">Cadastre-se</button>
     </section>
   </header>
   <!-- Menu de navegação global do site -->
@@ -174,7 +174,7 @@
                   <h4 class="card-preco">De: <del>R$140,98</del> <br> Por: R$100,98</h4>
                   <p class="card-descricao">Um verdadeiro arco-íris de cores para a decorar o seu cantinho preferido!
                     As texturas das plantas desidratadas dão um toque rústico aos ambientes sem perder a delicadeza e
-                    naturalidade. !</p>
+                    naturalidade!</p>
                   <div class="card-botoes">
                     <button class="card-botaoCarrinho">
                       <img src="img/IconeCarrinho.png">
@@ -203,7 +203,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Buquê tropical</h5>
                   <h4 class="card-preco">De: <del>R$186,98</del> <br> Por: R$150,98</h4>
-                  <p class="card-descricao">Composição de flores e folhagens TROPICAIS em pote de vidro.
+                  <p class="card-descricao">Composição de flores e folhagens tropicais em pote de vidro.
                     O arranjo poderá apresentar variação de cores e flores, de acordo com a estação e disponibilidade.
                   </p>
                   <div class="card-botoes">
@@ -241,7 +241,7 @@
                   <h4 class="card-preco">De: <del>R$256,98</del> <br> Por: R$206,98</h4>
                   <p class="card-descricao">As flores tropicais são famosas por sua beleza e cores vibrantes e vão muito
                     além dos ornamentos.
-                    por isso criamos nosso buque especil para presentear quem se ama.</p>
+                    Por isso criamos nosso buquê especial para presentear quem se ama.</p>
                   <div class="card-botoes">
                     <button class="card-botaoCarrinho">
                       <img src="img/IconeCarrinho.png">
@@ -256,7 +256,7 @@
                   <h5 class="card-title">Buquê tropical</h5>
                   <h4 class="card-preco">De: <del>R$206,98</del> <br> Por: R$146,98</h4>
                   <p class="card-descricao"> Ideal para presentear a pessoa que se ama, com uma imensa diversidade de
-                    cores com a pra tropicalidade brasileira.</p>
+                    cores com a tropicalidade brasileira.</p>
                   <div class="card-botoes">
                     <button class="card-botaoCarrinho">
                       <img src="img/IconeCarrinho.png">
@@ -292,7 +292,7 @@
             <div class="gridCard-conteudo">
               <h5>Caminho de mesa tropical</h5>
               <p class=conteudo-preco>R$300,00</p>
-              <p class="conteudo-descricao">Alegre sua casa. Mais cor e vida no ambiente com esse lindo caminho demesa
+              <p class="conteudo-descricao">Alegre sua casa. Mais cor e vida no ambiente com esse lindo caminho de mesa
                 com flores tropicais</p>
               <div class="card-botoes">
                 <button class="card-botaoCarrinho">
@@ -330,8 +330,8 @@
             <div class="gridCard-conteudo">
               <h5>Arranjo de Mesa</h5>
               <p class=conteudo-preco>R$259,00</p>
-              <p class="conteudo-descricao">Uma Forma Linda de Presentear Alguém Muito Especial. Surpreenda a pessoa
-                amada da forma mais bonita que se existe =, presenteando.</p>
+              <p class="conteudo-descricao">Uma forma linda de presentear alguém muito especial. Surpreenda a pessoa
+                amada da forma mais bonita que se existe.</p>
               <div class="card-botoes">
                 <button class="card-botaoCarrinho">
                   <img src="img/IconeCarrinho.png">
@@ -350,7 +350,7 @@
               <h5>Box tropical</h5>
               <p class=conteudo-preco>R$162,80</p>
               <p class="conteudo-descricao">A combinação que não pode faltar. O branco com o tropical! O arranjo
-                tropical fica por conta das flores em tons de laranja, vermelho e amarelo, com um mix de folhagens bem.
+                tropical fica por conta das flores em tons de laranja, vermelho e amarelo, com um mix de folhagens.
               </p>
               <div class="card-botoes">
                 <button class="card-botaoCarrinho">
@@ -411,8 +411,8 @@
             <div class="gridCard-conteudo">
               <h5>Arranjo tropical</h5>
               <p class=conteudo-preco>R$259,00</p>
-              <p class="conteudo-descricao"> Sofisticado Arranjo de Heliconia Bihai em um lindo vaso de vidro tipo
-                aquario com corte baixo. As flores tropicais alem de lindas tambem decoram o ambiente.</p>
+              <p class="conteudo-descricao"> Sofisticado arranjo de heliconia Bihai em um lindo vaso de vidro tipo
+                aquário com corte baixo. As flores tropicais além de lindas também decoram o ambiente.</p>
               <div class="card-botoes">
                 <button class="card-botaoCarrinho">
                   <img src="img/IconeCarrinho.png">
@@ -490,8 +490,8 @@
             <div class="gridCard-conteudo">
               <h5>Arranjo tropical</h5>
               <p class=conteudo-preco>R$346,00</p>
-              <p class="conteudo-descricao">Sofisticado Arranjo de Heliconia Bihai em um lindo vaso de vidro.
-                As flores tropicais alem de lindas tambem decoram o ambiente.</p>
+              <p class="conteudo-descricao">Sofisticado arranjo de heliconia Bihai em um lindo vaso de vidro.
+                As flores tropicais além de lindas também decoram o ambiente.</p>
               <div class="card-botoes">
                 <button class="card-botaoCarrinho">
                   <img src="img/IconeCarrinho.png">
@@ -509,8 +509,8 @@
             <div class="gridCard-conteudo">
               <h5>Box tropical</h5>
               <p class=conteudo-preco>R$324,00</p>
-              <p class="conteudo-descricao">Box Mix de Flores São tantas flores lindas que a Floricultura Paraíso, sabe
-                que você fica na dúvida na hora da escolha. E para quando isso acontecer a nossa criação </p>
+              <p class="conteudo-descricao">Box mix de flores são tantas flores lindas que a Floricultura Equador, sabe
+                que você fica na dúvida na hora da escolha. </p>
               <div class="card-botoes">
                 <button class="card-botaoCarrinho">
                   <img src="img/IconeCarrinho.png">
