Atualização da caixa de informações
- Rodapé foi atualizado também
- Renomeação da pasta CSS
- Adicionando imagem icone Whats e Telefone

--- a/index.html
+++ b/index.html
@@ -98,9 +98,20 @@
   <!-- Cabeçalho do site -->
   <header>
     <div class="caixa-info">
-      <p>Atendimento de segunda a sexta</p>
+      <p class="textoAtendimento">Atendimento de segunda a sexta</p>
+      <section class="informacoes">
+        <div>
+          <img src="img/iconeTelefone.png">
+          <p>3030-2343</p>
+        </div>
+        <div>
+          <img src="img/iconeWhatsApp.png">
+          <p>(81) 99887-3645</p>
+        </div>
+      </section>
     </div>
-    <div class="cabecalho">
+
+    <div class="cabecalho">    
       <section class="logo">
         <img src="img/LogoFloricultura.png">
         <h1>Floricultura Equador</h1>
@@ -126,11 +137,12 @@
       <li class="lista-menu"><a href="#">Ocasiões</a></li>
       <li class="lista-menu"><a href="#">Cestas</a></li>
       <li class="lista-menu"><a href="#">Promoções</a></li>
+      <li class="lista-menu"><a href="#">Monte sua cesta</a></li>
     </ul>
   </nav>
   <!-- Carrosel principal do site (foi utilizado Bootstrap) -->
   <section class="sessao-banner">
-    <div>
+    <div class="banner-img">
       <img src="img/imagemBannerPrincipal.png">
     </div>
 
@@ -514,9 +526,6 @@
   </main>
   <!-- Rodapé do website -->
   <footer class="rodape">
-    <img class="icones-rodape" src="img/iconeWhatsapp.png">
-    <img class="icones-rodape" src="img/iconeInstagram.png">
-    <img class="icones-rodape" src="img/iconeFacebook.png">
   </footer>
 
 
