Criação da seção todos os produtos
- Adicionando novas imagens
- criação da seção todos os produtos

--- a/index.html
+++ b/index.html
@@ -149,8 +149,28 @@
     <div class="linha-banner">
     </div>
   </section>
-  <!-- Sessão principal do site, onde irá conter os produtos em destaque e em promoção -->
+  <!-- Sessão principal do site, onde irá conter as informações do produto -->
   <main>
+    <section class="secao-produtoDestaque">
+      <div class="destaques">
+        <img src="img/Shop1Destaques.png">
+        <div>
+          <p id="descricaoProdutoDestaque">Bouquet de flores tropicais com acabamento em papel de seda e laço de cetim. Nossa criação mais diferente e exótica para presentear de forma única! Uma seleção de flores tropicais e exóticas em uma composição exclusiva com assinatura Giardini. Aproximadamente 40 hastes de flores e folhagens.</p>
+          <p id="textoDisponivel">Disponibilidade: Em estoque</p>
+
+          <div class="botoesDestaque">
+              <button class="destaqueBotao-comprar">Comprar agora</button>
+              <button class="destaqueBotao-carrinho">
+                <img src="img/IconeCarrinho.png">
+              </button>
+          </div>
+        </div>
+        </div>
+
+      </div>
+
+    </section>
+
     <section class="secao-promocao">
       <div class="promocao-menu">
         <p>Produtos em Promoção</p>
@@ -279,7 +299,19 @@
         </div>
       </div>
     </section>
-   
+    
+
+    <section class="secao-todosProdutos">
+      <p>Todos os produtos</p>
+      <div id="linhaTexto"></div>
+      <div class="produtosImagens">
+        <img src="img/secaoProdutos - img1.png">
+        <img src="img/secaoProdutos - img2.png">
+        <img src="img/secaoProdutos - img3.png">
+        <img src="img/secaoProdutos - img4.png">
+      </div>
+      
+    </section>
 
   </main>
   <!-- Rodapé do website -->
