--- a/index.html
+++ b/index.html
@@ -100,13 +100,15 @@
     <div class="caixa-info">
       <p class="textoAtendimento">Atendimento de segunda a sexta</p>
       <section class="informacoes">
+        <img src="img/2-bandeira-do-brasil 1.png">
+        <img src="img/bandeira-estados-unidos 1.png">
         <div>
-          <img src="img/iconeTelefone.png">
-          <p>3030-2343</p>
-        </div>
-        <div>
-          <img src="img/iconeWhatsApp.png">
-          <p>(81) 99887-3645</p>
+          <input type="checkbox" class="checkbox" id="chk" />
+          <label class="label" for="chk">
+            <i class="fas fa-moon"></i>
+            <i class="fa-solid fa-sun-cloud" style="color: #fff700;"></i>
+            <div class="ball"></div>
+          </label>
         </div>
       </section>
     </div>
@@ -181,122 +183,84 @@
         </ul>
       </div>
       <!-- Carousel dos produtos promocao -->
-      <div id="carouselExampleControls" class="carousel carousel-dark slide" data-ride="carousel" data-interval="0"
-        style="padding-top: 5px;">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <div class="card-wrapper container-sm d-flex  justify-content-around">
-              <div class="card">
-                <img src="img/Arranjo-promocao1.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Buquê tropical</h5>
-                  <h4 class="card-preco">De: <del>R$140,98</del> <br> Por: R$100,98</h4>
-                  <p class="card-descricao">Um verdadeiro arco-íris de cores para a decorar o seu cantinho preferido!
-                    As texturas das plantas desidratadas dão um toque rústico aos ambientes sem perder a delicadeza e
-                    naturalidade!</p>
-                  <div class="card-botoes">
-                    <button class="card-botaoCarrinho">
-                      <img src="img/IconeCarrinho.png">
-                    </button>
-                    <button class="card-botaoComprar">Comprar</button>
-                  </div>
-                </div>
-              </div>
-              <div class="card">
-                <img src="img/Arranjo-promocao2.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Buquê tropical</h5>
-                  <h4 class="card-preco">De: <del>R$126,98</del> <br> Por: R$106,98</h4>
-                  <p class="card-descricao">Muito bom para presentear a sua pessoa amada e lembrar o quanto ela é
-                    importante, num dia comum ou numa data especial!</p>
-                  <div class="card-botoes">
-                    <button class="card-botaoCarrinho">
-                      <img src="img/IconeCarrinho.png">
-                    </button>
-                    <button class="card-botaoComprar">Comprar</button>
-                  </div>
-                </div>
-              </div>
-              <div class="card">
-                <img src="img/Arranjo-promocao3.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Buquê tropical</h5>
-                  <h4 class="card-preco">De: <del>R$186,98</del> <br> Por: R$150,98</h4>
-                  <p class="card-descricao">Composição de flores e folhagens tropicais em pote de vidro.
-                    O arranjo poderá apresentar variação de cores e flores, de acordo com a estação e disponibilidade.
-                  </p>
-                  <div class="card-botoes">
-                    <button class="card-botaoCarrinho">
-                      <img src="img/IconeCarrinho.png">
-                    </button>
-                    <button class="card-botaoComprar">Comprar</button>
-                  </div>
 
-                </div>
-              </div>
+      <div class="cardsPromocao">
+        <div class="card">
+          <img src="img/imgCestaCafé.png">
+          <div class="infoProduto">
+            <h5 class="card-title">Cesta de Café da manhã para o seu Amor</h5>
+            <h4 class="card-preco">De: <del>R$307,90</del> <br> Por: <strong>R$ 263,90</strong></h4>
+            <p class="card-descricao">A Cesta de Café da Manhã Coração, além de surpreender, forma uma refeição completa para quem você ama. Isso porque ela traz bolo, achocolatado, suco, café solúvel, cappuccino, pães, biscoitos, frios, frutas, cream cheese e chocolates.</p>
+            <div class="card-botoes">
+              <button class="card-botaoCarrinho">
+                <img src="img/IconeCarrinho.png">
+              </button>
+              <button class="card-botaoComprar">Comprar</button>
             </div>
           </div>
-          <div class="carousel-item">
-            <div class="card-wrapper container-sm d-flex   justify-content-around">
-              <div class="card">
-                <img src="img/buque 1.jpeg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Buquê tropical</h5>
-                  <h4 class="card-preco">De: <del>R$250,00</del> <br> Por: R$200,00</h4>
-                  <p class="card-descricao"> Nossa criação mais diferente e exótica para presentear de forma única!
-                    Uma seleção de flores tropicais e exóticas em uma composição exclusiva com assinatura Giardini.</p>
-                  <div class="card-botoes">
-                    <button class="card-botaoCarrinho">
-                      <img src="img/IconeCarrinho.png">
-                    </button>
-                    <button class="card-botaoComprar">Comprar</button>
-                  </div>
-                </div>
-              </div>
-              <div class="card">
-                <img src="img/buque 2.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Buquê tropical</h5>
-                  <h4 class="card-preco">De: <del>R$256,98</del> <br> Por: R$206,98</h4>
-                  <p class="card-descricao">As flores tropicais são famosas por sua beleza e cores vibrantes e vão muito
-                    além dos ornamentos.
-                    Por isso criamos nosso buquê especial para presentear quem se ama.</p>
-                  <div class="card-botoes">
-                    <button class="card-botaoCarrinho">
-                      <img src="img/IconeCarrinho.png">
-                    </button>
-                    <button class="card-botaoComprar">Comprar</button>
-                  </div>
-                </div>
-              </div>
-              <div class="card">
-                <img src="img/buque 3.jfif" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Buquê tropical</h5>
-                  <h4 class="card-preco">De: <del>R$206,98</del> <br> Por: R$146,98</h4>
-                  <p class="card-descricao"> Ideal para presentear a pessoa que se ama, com uma imensa diversidade de
-                    cores com a tropicalidade brasileira.</p>
-                  <div class="card-botoes">
-                    <button class="card-botaoCarrinho">
-                      <img src="img/IconeCarrinho.png">
-                    </button>
-                    <button class="card-botaoComprar">Comprar</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
         </div>
+
+        <div class="card">
+          <img src="img/imgBuquêChampagne.png">
+          <div class="infoProduto">
+            <h5 class="card-title">Buquê de 8 Rosas Champagne e Chocolate</h5>
+            <h4 class="card-preco">De: <del>R$140,98</del> <br> Por: <strong>R$ 139,90</strong></h4>
+            <p class="card-descricao">Simpatia, admiração e fidelidade, esses são os significados que as rosas na cor champanhe trazem. Esse buquê, que vem acompanhado por uma caixa de bombons, é perfeito para oferecer à pessoa amada nos momentos mais especiais.</p>
+            <div class="card-botoes">
+              <button class="card-botaoCarrinho">
+                <img src="img/IconeCarrinho.png">
+              </button>
+              <button class="card-botaoComprar">Comprar</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="img/imgBuqueEChocolate.png">
+          <div class="infoProduto">
+            <h5 class="card-title">Buquê de 6 Rosas Vermelhas e Chocolate</h5>
+            <h4 class="card-preco">De: <del>R$140,98</del> <br> Por: <strong>R$ 149,90</strong></h4>
+            <p class="card-descricao">Chocolates e Flores são presentes que nunca saem de moda. Este lindo buquê de talo médio é confeccionado com 6 rosas vermelhas envolvidas em Ruscus, Tango e acabamento em ráfia; Acompanha também deliciosos bombons Ferrero Rocher ou similares.</p>
+            <div class="card-botoes">
+              <button class="card-botaoCarrinho">
+                <img src="img/IconeCarrinho.png">
+              </button>
+              <button class="card-botaoComprar">Comprar</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="img/CestaRosasMargaridasBrancas.png">
+          <div class="infoProduto">
+            <h5 class="card-title">Cesta com Rosas e Margaridas Amarelas e Brancas</h5>
+            <h4 class="card-preco">De: <del>R$140,98</del> <br> Por: <strong>R$ 139,90</strong></h4>
+            <p class="card-descricao">Presentear alguém importante com um cesta de rosas e margaridas amarelas e brancas, como essa, faz com que você se mostre presente em todos os momentos e datas importantes, mesmo morando distante.</p>
+            <div class="card-botoes">
+              <button class="card-botaoCarrinho">
+                <img src="img/IconeCarrinho.png">
+              </button>
+              <button class="card-botaoComprar">Comprar</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="img/CestaCafeChocolateFlores.png">
+          <div class="infoProdutos">
+            <h5 class="card-title">Cesta de Café com Chocolate e Flores Luxo</h5>
+            <h4 class="card-preco">De: <del>R$296,98</del> <br> Por: <strong> R$ 263,90</strong></h4>
+            <p class="card-descricao">Uma deliciosa cesta de café da manhã incluindo diversas guloseimas. São variedades de chocolate, bombons Sonhos de Valsa, chocolates em barra e um arranjo delicado de flores.</p>
+            <div class="card-botoes">
+              <button class="card-botaoCarrinho">
+                <img src="img/IconeCarrinho.png">
+              </button>
+              <button class="card-botaoComprar">Comprar</button>
+            </div>
+          </div>
+        </div>
+
+        
       </div>
     </section>
     
@@ -323,6 +287,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous">
   </script>
+  <script src="https://kit.fontawesome.com/998c60ef77.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
