--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <!-- Importando os estilos CSS -->
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/reset.css">
+  <script src="https://kit.fontawesome.com/8df296b2be.js" crossorigin="anonymous"></script>
   <title>Floricultura Equador</title>
 </head>
 
@@ -100,15 +101,24 @@
     <div class="caixa-info">
       <p class="textoAtendimento">Atendimento de segunda a sexta</p>
       <section class="informacoes">
-        <img src="img/2-bandeira-do-brasil 1.png">
-        <img src="img/bandeira-estados-unidos 1.png">
+        <div class="imagensBandeiras">
+          <img src="img/2-bandeira-do-brasil 1.png">
+          <img src="img/bandeira-estados-unidos 1.png">
+        </div>
+        <div class="botaoTextos">
+          <button>A+</button>
+          <button>A-</button>
+        </div>
         <div>
           <input type="checkbox" class="checkbox" id="chk" />
           <label class="label" for="chk">
-            <i class="fas fa-moon"></i>
-            <i class="fa-solid fa-sun-cloud" style="color: #fff700;"></i>
-            <div class="ball"></div>
+            <div class="ball">
+              <i class="fa-solid fa-sun fa-xs" id="modoDark"></i>
+            </div>
           </label>
+        </div>
+        <div class="iconeCarrinhoHeader">
+          <img src="img/icon/carrinho.svg">
         </div>
       </section>
     </div>
@@ -139,7 +149,7 @@
       <li class="lista-menu"><a href="#">Ocasiões</a></li>
       <li class="lista-menu"><a href="#">Cestas</a></li>
       <li class="lista-menu"><a href="#">Promoções</a></li>
-      <li class="lista-menu"><a href="#">Monte sua cesta</a></li>
+      <li class="lista-menu"><a href="#">Box</a></li>
     </ul>
   </nav>
   <!-- Carrosel principal do site (foi utilizado Bootstrap) -->
@@ -287,7 +297,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous">
   </script>
-  <script src="https://kit.fontawesome.com/998c60ef77.js" crossorigin="anonymous"></script>
+  <script src="js/modoDark.js"></script>
+  <!-- <script src="https://kit.fontawesome.com/8df296b2be.js" crossorigin="anonymous"></script> -->
 </body>
 
 </html>
