Criação da página de produtos

--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
 
     <div class="cabecalho">    
       <section class="logo">
-        <img src="img/LogoFloricultura.png">
-        <h1>Floricultura Equador</h1>
+        <a href="index.html"><img src="img/LogoFloricultura.png"></a>
+        <a href="index.html" style="text-decoration: none;"><h1>Floricultura Equador</h1></a>
       </section>
   
       <section class="inputPesquisar">
@@ -145,14 +145,14 @@
   <!-- Menu de navegação global do site -->
   <nav class="navegacao">
     <ul class="menu">
-      <li class="lista-menu"><a href="#">Produtos</a></li>
+      <li class="lista-menu"><a href="paginasPortugues/produtos.html">Produtos</a></li>
       <li class="lista-menu"><a href="#">Ocasiões</a></li>
       <li class="lista-menu"><a href="#">Cestas</a></li>
       <li class="lista-menu"><a href="#">Promoções</a></li>
       <li class="lista-menu"><a href="#">Box</a></li>
     </ul>
   </nav>
-  <!-- Carrosel principal do site (foi utilizado Bootstrap) -->
+  <!-- banner principal do site -->
   <section class="sessao-banner">
     <div class="banner-img">
       <img src="img/imagemBannerPrincipal.png">
