Atualização rodapé + modo dark

--- a/index.html
+++ b/index.html
@@ -290,6 +290,18 @@
   </main>
   <!-- Rodapé do website -->
   <footer class="rodape">
+    <div class="iconeTelefone">
+      <img src="img/iconeTelefone.png">
+      <p>3030-2543</p>
+    </div>
+    <div class="iconeWhats">
+      <img src="img/iconeWhatsapp.png">
+      <p>(81) 99847-3645</p>
+    </div>
+    <div class="iconeInstagram">
+      <img src="img/iconeInstagram.png">
+      <p>floricultura_equador</p>
+    </div>
   </footer>
 
 
