Modo dark da página de produtos
- Criação modo dark modal cadastro
-  Criação modo dark modal login

--- a/paginasPortugues/produtos.html
+++ b/paginasPortugues/produtos.html
@@ -53,7 +53,7 @@
         <div class="modal-content modal-caixaGeral">
         <div class="modal-caixaApresentacao">
             <div class="apresentacao-logotipo">
-            <img src="img/LogoFloricultura.png">
+            <img src="../img/LogoFloricultura.png">
             <h1>Floricultura Equador</h1>
             </div>
             <div class="apresentacao-texto">
@@ -68,7 +68,7 @@
         <div class="modal-caixaLogin">
             <div class="login-header">
             <h1>Login</h1>
-            <img src="img/IconeSegurança.png">
+            <img src="../img/IconeSegurança.png">
             </div>
             <form class="formularioLogin">
             <input type="email" id="loginEmail" placeholder="Email" />
@@ -79,11 +79,11 @@
             <p id="textoConectarRede">Conectar pelas redes sociais</p>
             <div class="botoesFormaLogin">
             <button class="botaoGoogle">
-                <div><img src="img/IconeLoginGoogle.png"></div>
+                <div><img src="../img/IconeLoginGoogle.png"></div>
                 Entre com o google
             </button>
             <button class="botaoFacebook">
-                <div><img src="img/IconeLoginFace.png"></div>
+                <div><img src="../img/IconeLoginFace.png"></div>
                 Entre com o Facebook
             </button>
             </div>
@@ -151,9 +151,8 @@
     </nav>
     <!-- Importação do Script bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous">
-    </script>
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script src="../js/modoDarkProdutos.js"></script>
     <script src="https://kit.fontawesome.com/8df296b2be.js" crossorigin="anonymous"></script>
-    <script src="../js/modoDark.js"></script>
 </body>
 </html>
