--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous">
   </script>
-  <script src="js/modoDark.js"></script>
+  <script src="js/modoDarkPrincipal.js"></script>
   <!-- <script src="https://kit.fontawesome.com/8df296b2be.js" crossorigin="anonymous"></script> -->
 </body>
 
