Criação da página de ocasiões

--- a/paginasPortugues/ocasioes.html
+++ b/paginasPortugues/ocasioes.html
@@ -139,16 +139,50 @@
         </section>
         </div>
     </header>
+
     <!-- Menu de navegação global do site -->
     <nav class="navegacao">
         <ul class="menu">
-        <li class="lista-menu"><a href="produtos.html" style="color:#000000; font-weight: 800px; background-color: white; border-radius: 4px;">Produtos</a></li>
-        <li class="lista-menu"><a href="ocasioes.html">Ocasiões</a></li>
+        <li class="lista-menu"><a href="produtos.html">Produtos</a></li>
+        <li class="lista-menu"><a href="ocasioes.html" style="color:#000000; font-weight: 800px; background-color: white; border-radius: 4px;">Ocasiões</a></li>
         <li class="lista-menu"><a href="#">Cestas</a></li>
         <li class="lista-menu"><a href="#">Promoções</a></li>
         <li class="lista-menu"><a href="#">Box</a></li>
         </ul>
     </nav>
+
+     <!-- Página main/principal do site -->
+     <main>
+        <section class="menuDepartamento">
+            <div>
+                <p>Departamento</p>
+            </div>
+            <ul>
+                <li class="listaMenu-departamento"><a href="#">Arranjo</a></li>
+                <li class="listaMenu-departamento"><a href="#">Buquês</a></li>
+                <li class="listaMenu-departamento"><a href="#">Buquê Noivas</a></li>
+                <li class="listaMenu-departamento"><a href="#">Cestas</a></li>
+                <li class="listaMenu-departamento"><a href="#">Complementos</a></li>
+                <li class="listaMenu-departamento"><a href="#">Coroa Fúnibres</a></li>
+                <li class="listaMenu-departamento"><a href="#">Decoração</a></li>
+                <li class="listaMenu-departamento"><a href="#">Ramalhetes</a></li>
+                <li class="listaMenu-departamento"><a href="#">Box</a></li>
+            </ul>
+        </section>
+
+        <section class="diaNamorados">
+            <div class="titulo">
+                <p> Dias dos namorados</p>
+                <div class="linhaTexto-ocasioes"></div>
+            </div>
+
+            <div class="imagensOcasioes">
+
+            </div>
+
+
+        </section>
+     </main>
     <!-- Importação do Script bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
