--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
   <nav class="navegacao">
     <ul class="menu">
       <li class="lista-menu"><a href="paginasPortugues/produtos.html">Produtos</a></li>
-      <li class="lista-menu"><a href="#">Ocasiões</a></li>
+      <li class="lista-menu"><a href="paginasPortugues/ocasioes.html">Ocasiões</a></li>
       <li class="lista-menu"><a href="#">Cestas</a></li>
       <li class="lista-menu"><a href="#">Promoções</a></li>
       <li class="lista-menu"><a href="#">Box</a></li>
