Atualização página de ocasiões
- Adicionando novas imagens
- Atualização Página de ocasiões

--- a/paginasPortugues/ocasioes.html
+++ b/paginasPortugues/ocasioes.html
@@ -176,12 +176,133 @@
                 <div class="linhaTexto-ocasioes"></div>
             </div>
 
-            <div class="imagensOcasioes">
+            <div class="imagensGrid">
+                <div class="gridLinha">
+                    <div class="gridColuna">
+                        <img src="../img/imgNamorados1.png">
+                    </div>
+
+                    <div class="gridColuna">
+                        <img src="../img/imgNamorados2.png">
+                    </div>
+
+                    <div class="gridColuna">
+                        <img src="../img/imgNamorados3.png">
+                    </div>
+
+                </div>
+
+                <div class="gridLinha">
+                    <div class="gridColuna">
+                        <img src="../img/imgNamorados4.png">
+                    </div>
+
+                    <div class="gridColuna">
+                        <img src="../img/imgNamorados5.png">
+                    </div>
+
+                    <div class="gridColuna">
+                        <img src="../img/imgNamorados6.png">
+                    </div>
+                </div>
 
             </div>
-
-
         </section>
+
+        <section class="secao-casamento">
+            <div class="titulo">
+                <p>Casamento</p>
+                <div class="linhaTexto-ocasioes"></div>
+            </div>
+
+            <div class="imagensGrid">
+                <div class="gridLinha">
+                    <div class="gridColuna">
+                        <img src="../img/imgCasamento1.png">
+                    </div>
+
+                    <div class="gridColuna">
+                        <img src="../img/imgNamorados6.png">
+                    </div>
+
+                    <div class="gridColuna">
+                        <img src="../img/imgCasamento3.png">
+                    </div>
+
+                    <div class="gridColuna">
+                        <img src="../img/imgCasamento4.png">
+                    </div>
+
+                </div>
+
+                <div class="gridLinha">
+                    <div class="gridColuna">
+                        <img src="../img/imgCasamento5.png">
+                    </div>
+
+                    <div class="gridColuna">
+                        <img src="../img/imgCasamento6.png">
+                    </div>
+
+                    <div class="gridColuna">
+                        <img src="../img/imgCasamento7.png">
+                    </div>
+
+                    <div class="gridColuna">
+                        <img src="../img/imgCasamento8.png">
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
+        <section class="secao-aniversario">
+            <div class="titulo">
+                <p>Aniversário</p>
+                <div class="linhaTexto-ocasioes"></div>
+            </div>
+
+            <div class="imagensGrid">
+                <div class="gridLinha">
+                    <div class="gridColuna">
+                        <img src="../img/imgAniversario1.png">
+                    </div>
+
+                    <div class="gridColuna">
+                        <img src="../img/imgAniversario2.png">
+                    </div>
+
+                    <div class="gridColuna">
+                        <img src="../img/imgAniversario3.png">
+                    </div>
+
+                    <div class="gridColuna">
+                        <img src="../img/imgAniversario4.png">
+                    </div>
+
+                </div>
+
+                <div class="gridLinha">
+                    <div class="gridColuna">
+                        <img src="../img/imgAniversario5.png">
+                    </div>
+
+                    <div class="gridColuna">
+                        <img src="../img/imgAniversario6.png">
+                    </div>
+
+                    <div class="gridColuna">
+                        <img src="../img/imgAniversario7.png">
+                    </div>
+
+                    <div class="gridColuna">
+                        <img src="../img/imgAniversario8.png">
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
      </main>
     <!-- Importação do Script bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
