--- a/paginasPortugues/produtos.html
+++ b/paginasPortugues/produtos.html
@@ -150,7 +150,157 @@
         </ul>
     </nav>
 
-    
+    <main>
+        <section class="menuDepartamento">
+            <div>
+                <p>Departamento</p>
+            </div>
+            <ul>
+                <li class="listaMenu-departamento"><a href="#">Arranjo</a></li>
+                <li class="listaMenu-departamento"><a href="#">Buquês</a></li>
+                <li class="listaMenu-departamento"><a href="#">Buquê Noivas</a></li>
+                <li class="listaMenu-departamento"><a href="#">Cestas</a></li>
+                <li class="listaMenu-departamento"><a href="#">Complementos</a></li>
+                <li class="listaMenu-departamento"><a href="#">Coroa Fúnibres</a></li>
+                <li class="listaMenu-departamento"><a href="#">Decoração</a></li>
+                <li class="listaMenu-departamento"><a href="#">Ramalhetes</a></li>
+                <li class="listaMenu-departamento"><a href="#">Box</a></li>
+            </ul>
+        </section>
+
+        <section class="secao-arranjo">
+            <div class="titulo">
+                <p>Arranjos</p>
+                <div class="linhaTexto-ocasioes"></div>
+            </div>
+
+            <div class="imagensGrid">
+                <div class="gridLinha">
+                    <div class="gridColuna">
+                        <img src="../img/Arranjo1.png">
+                    </div>
+
+                    <div class="gridColuna">
+                        <img src="../img/Arranjo2.png">
+                    </div>
+
+                    <div class="gridColuna">
+                        <img src="../img/Arranjo3.png">
+                    </div>
+
+                </div>
+
+                <div class="gridLinha">
+                    <div class="gridColuna">
+                        <img src="../img/Arranjo4.png">
+                    </div>
+
+                    <div class="gridColuna">
+                        <img src="../img/Arranjo5.png">
+                    </div>
+
+                    <div class="gridColuna">
+                        <img src="../img/Arranjo6.png">
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
+        <section class="secao-buque">
+            <div class="titulo">
+                <p>Buquês</p>
+                <div class="linhaTexto-ocasioes"></div>
+            </div>
+
+            <div class="imagensGrid">
+                <div class="gridLinha">
+                    <div class="gridColuna">
+                        <img src="../img/Buque1.png">
+                    </div>
+
+                    <div class="gridColuna">
+                        <img src="../img/Buque2.png">
+                    </div>
+
+                    <div class="gridColuna">
+                        <img src="../img/Buque3.png">
+                    </div>
+
+                    <div class="gridColuna">
+                        <img src="../img/Buque3.png">
+                    </div>
+
+                </div>
+
+                <div class="gridLinha">
+                    <div class="gridColuna">
+                        <img src="../img/Buque4.png">
+                    </div>
+
+                    <div class="gridColuna">
+                        <img src="../img/Buque5.png">
+                    </div>
+
+                    <div class="gridColuna">
+                        <img src="../img/Buque6.png">
+                    </div>
+
+                    <div class="gridColuna">
+                        <img src="../img/Buque2.png">
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
+        <section class="secao-buqueNoiva">
+            <div class="titulo">
+                <p>Buquês de Noivas</p>
+                <div class="linhaTexto-ocasioes"></div>
+            </div>
+
+            <div class="imagensGrid">
+                <div class="gridLinha">
+                    <div class="gridColuna">
+                        <img src="../img/BuqueNoiva1.png">
+                    </div>
+
+                    <div class="gridColuna">
+                        <img src="../img/BuqueNoiva7.png">
+                    </div>
+
+                    <div class="gridColuna">
+                        <img src="../img/BuqueNoiva3.png">
+                    </div>
+
+                    <div class="gridColuna">
+                        <img src="../img/BuqueNoiva4.png">
+                    </div>
+
+                </div>
+
+                <div class="gridLinha">
+                    <div class="gridColuna">
+                        <img src="../img/BuqueNoiva5.png">
+                    </div>
+
+                    <div class="gridColuna">
+                        <img src="../img/BuqueNoiva6.png">
+                    </div>
+
+                    <div class="gridColuna">
+                        <img src="../img/BuqueNoiva7.png">
+                    </div>
+
+                    <div class="gridColuna">
+                        <img src="../img/BuqueNoiva4.png">
+                    </div>
+                </div>
+
+            </div>
+        </section>
+    </main>
     <!-- Importação do Script bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
