Arrumando o Active dos menus

--- a/paginasPortugues/produtos.html
+++ b/paginasPortugues/produtos.html
@@ -142,7 +142,7 @@
     <!-- Menu de navegação global do site -->
     <nav class="navegacao">
         <ul class="menu">
-        <li class="lista-menu"><a href="produtos.html" style="color:#000000; font-weight: 800px; background-color: white; border-radius: 4px;">Produtos</a></li>
+        <li class="lista-menu"><a href="produtos.html" class="listaMenuDark listaMenuLight">Produtos</a></li>
         <li class="lista-menu"><a href="ocasioes.html">Ocasiões</a></li>
         <li class="lista-menu"><a href="#">Cestas</a></li>
         <li class="lista-menu"><a href="#">Promoções</a></li>
