--- a/paginasPortugues/ocasioes.html
+++ b/paginasPortugues/ocasioes.html
@@ -144,7 +144,7 @@
     <nav class="navegacao">
         <ul class="menu">
         <li class="lista-menu"><a href="produtos.html">Produtos</a></li>
-        <li class="lista-menu"><a href="ocasioes.html" style="color:#000000; font-weight: 800px; background-color: white; border-radius: 4px;">Ocasiões</a></li>
+        <li class="lista-menu"><a href="ocasioes.html" class="listaMenuDark listaMenuLight">Ocasiões</a></li>
         <li class="lista-menu"><a href="#">Cestas</a></li>
         <li class="lista-menu"><a href="#">Promoções</a></li>
         <li class="lista-menu"><a href="#">Box</a></li>
