--- a/paginasPortugues/ocasioes.html
+++ b/paginasPortugues/ocasioes.html
@@ -143,11 +143,11 @@
     <!-- Menu de navegação global do site -->
     <nav class="navegacao">
         <ul class="menu">
-        <li class="lista-menu"><a href="produtos.html">Produtos</a></li>
+        <li class="lista-menu"><a href="produtos.html" class="listaHover">Produtos</a></li>
         <li class="lista-menu"><a href="ocasioes.html" class="listaMenuDark listaMenuLight">Ocasiões</a></li>
-        <li class="lista-menu"><a href="#">Cestas</a></li>
-        <li class="lista-menu"><a href="#">Promoções</a></li>
-        <li class="lista-menu"><a href="#">Box</a></li>
+        <li class="lista-menu"><a href="#" class="listaHover">Cestas</a></li>
+        <li class="lista-menu"><a href="#" class="listaHover">Promoções</a></li>
+        <li class="lista-menu"><a href="#" class="listaHover">Box</a></li>
         </ul>
     </nav>
 
@@ -304,6 +304,21 @@
         </section>
 
      </main>
+     <!-- Rodapé do website -->
+    <footer class="rodape">
+        <div class="iconeTelefone">
+        <img src="../img/iconeTelefone.png">
+        <p>3030-2543</p>
+        </div>
+        <div class="iconeWhats">
+        <img src="../img/iconeWhatsapp.png">
+        <p>(81) 99847-3645</p>
+        </div>
+        <div class="iconeInstagram">
+        <img src="../img/iconeInstagram.png">
+        <p>floricultura_equador</p>
+        </div>
+    </footer>
     <!-- Importação do Script bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
